--- a/demo/html/bauen/multipage-dark/contact.html
+++ b/demo/html/bauen/multipage-dark/contact.html
@@ -152,12 +152,12 @@
                             <div class="testimonials-box animate-box" data-animate-effect="fadeInUp">
                                 <div class="head-box">
 
-                                    <h4>What Client's Say?</h4>
+                                    <h4>Phản hồi của khách hàng</h4>
                                 </div>
                                 <div class="owl-carousel owl-theme">
                                     <div class="item">
                                         <span class="quote"><img src="img/quot.png" alt=""></span>
-                                        <p>Architect dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/1.jpg" alt=""> </div>
                                             <div class="cont">
