--- a/demo/html/bauen/multipage-dark/contact.html
+++ b/demo/html/bauen/multipage-dark/contact.html
@@ -168,7 +168,7 @@
                                     <div class="item"> <span class="quote">
                                             <img src="img/quot.png" alt="">
                                         </span>
-                                        <p>Interior dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/2.jpg" alt=""> </div>
                                             <div class="cont">
@@ -179,7 +179,7 @@
                                     <div class="item"> <span class="quote">
                                             <img src="img/quot.png" alt="">
                                         </span>
-                                        <p>Urban dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/4.jpg" alt=""> </div>
                                             <div class="cont">
