feedbacks khach hang

--- a/demo/html/bauen/multipage-dark/contact.html
+++ b/demo/html/bauen/multipage-dark/contact.html
@@ -161,7 +161,7 @@
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/1.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Jason Brown</h6> <span>Crowne Plaza Owner</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
@@ -172,7 +172,7 @@
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/2.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Emily White</h6> <span>Armada Owner</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
@@ -183,7 +183,7 @@
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/4.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Jesica Smith</h6> <span>Alsa Manager</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
