--- a/demo/html/bauen/multipage-dark/team.html
+++ b/demo/html/bauen/multipage-dark/team.html
@@ -89,7 +89,7 @@
                         <div class="item">
                             <div class="img"> <img src="img/team/1.jpg" alt=""> </div>
                             <div class="info">
-                                <h6>Jason Brown</h6>
+                                <h6>Lorem Ipsum</h6>
                                 <p>Architect</p>
                                 <div class="social valign">
                                     <div class="full-width">
@@ -101,7 +101,7 @@
                         <div class="item">
                             <div class="img"> <img src="img/team/2.jpg" alt=""> </div>
                             <div class="info">
-                                <h6>Emily White</h6>
+                                <h6>Lorem Ipsum</h6>
                                 <p>Architect</p>
                                 <div class="social valign">
                                     <div class="full-width">
@@ -125,7 +125,7 @@
                         <div class="item">
                             <div class="img"> <img src="img/team/4.jpg" alt=""> </div>
                             <div class="info">
-                                <h6>Jesica Smith</h6>
+                                <h6>Lorem Ipsum</h6>
                                 <p>Architect</p>
                                 <div class="social valign">
                                     <div class="full-width">
@@ -174,7 +174,7 @@
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/1.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Jason Brown</h6> <span>Crowne Plaza Owner</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
@@ -185,7 +185,7 @@
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/2.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Emily White</h6> <span>Armada Owner</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
@@ -196,7 +196,7 @@
                                         <div class="info">
                                             <div class="author-img"> <img src="img/team/4.jpg" alt=""> </div>
                                             <div class="cont">
-                                                <h6>Jesica Smith</h6> <span>Alsa Manager</span>
+                                                <h6>Lorem Ipsum</h6> <span>ABC</span>
                                             </div>
                                         </div>
                                     </div>
