--- a/demo/html/bauen/multipage-dark/blog.html
+++ b/demo/html/bauen/multipage-dark/blog.html
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="item">
-                            <div class="position-re o-hidden"> <img src="img/slider/1.jpg" alt=""> </div>
+                            <div class="position-re o-hidden"> <img src="/img/new1.jpg" alt=""> </div>
                             <div class="con">
                                 <span class="category">
                                     <a href="blog.html">Kiến trúc</a> - 20.12.2021
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="item">
-                            <div class="position-re o-hidden"> <img src="img/slider/2.jpg" alt=""> </div>
+                            <div class="position-re o-hidden"> <img src="/img/new2.jpg" alt=""> </div>
                             <div class="con"> <span class="category">
                                     <a href="blog.html">Nội thất</a> - 18.12.2021
                                 </span>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="item">
-                            <div class="position-re o-hidden"> <img src="img/slider/3.jpg" alt=""> </div>
+                            <div class="position-re o-hidden"> <img src="/img/new3.jpg" alt=""> </div>
                             <div class="con"> <span class="category">
                                     <a href="blog.html">Kiến trúc</a> - 16.12.2021
                                 </span>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="item">
-                            <div class="position-re o-hidden"> <img src="img/slider/4.jpg" alt=""> </div>
+                            <div class="position-re o-hidden"> <img src="/img/new4.jpg" alt=""> </div>
                             <div class="con"> <span class="category">
                                     <a href="blog.html">Bảng giá</a> - 14.12.2021
                                 </span>
