--- a/demo/html/bauen/multipage-dark/contact.html
+++ b/demo/html/bauen/multipage-dark/contact.html
@@ -81,35 +81,35 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInUp">
-                        <h2 class="section-title">Contact <span>Us</span></h2>
+                        <h2 class="section-title">Liên hệ <span>với chúng tôi</span></h2>
                     </div>
                 </div>
                 <div class="row mb-90">
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <p><b>RULA Architecture Firm</b></p>
-                        <p>Our firm nisl sodales sit amet sapien idea placerat sodales orcite. Vivamus ne miss rhoncus felis RULA architecture.</p>
-                        <p><b>VAT :</b> USA002323065B06</p>
+                        <p><b>RULA ARCHITECTS & CONSTRUCTS</b></p>
+                                                <p>We are born Please and Ready to work with you in your Projects to success.</p>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     </div>
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <p><b>Contact Details</b></p>
+                        <p><b>Thông tin liên hệ</b></p>
                         <p><b>Hotline :</b> (+84) 974372468</p>
                         <p><b>Email :</b> info@rula.com.vn</p>
-                        <p><b>Address :</b> 24 King St, Charleston, 29401 USA</p>
+                        <p><b>Địa chỉ :</b> Tầng 4 - số 119 Nguyễn Ngọc Nại - Thanh Xuân - Hà Nội - Việt Nam</p>
                     </div>
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInUp">
-                        <p><b>Contact Form</b></p>
+                        <p><b>Form đăng ký</b></p>
                         <form method="post" class="row">
                             <div class="col-md-12">
-                                <input type="text" name="name" id="name" placeholder="Full Name">
+                                <input type="text" name="name" id="name" placeholder="Họ và tên ">
                             </div>
                             <div class="col-md-12">
-                                <input type="email" name="email" id="email" placeholder="Your Email" required="">
+                                <input type="email" name="email" id="email" placeholder="Email" required="">
                             </div>
                             <div class="col-md-12">
-                                <textarea name="message" id="message" cols="40" rows="4" placeholder="Your Message"></textarea>
+                                <textarea name="message" id="message" cols="40" rows="4" placeholder="Nội dung"></textarea>
                             </div>
                             <div class="col-md-12">
-                                <button class="butn-dark mt-15"><a href="#0"><span>Send</span></a></button>
+                                <button class="butn-dark mt-15"><a href="#0"><span>Gửi</span></a></button>
                             </div>
                         </form>
                     </div>
